# zefiro

./: .env_docker  .gitignore  LICENSE  README.md  docker-compose.yaml  hosts  package.json  playbook.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
etc/configs/: global-config.yaml
etc/configs/riskfolio/: agents.yaml  config.yaml
meta-crew-frontend/: .env_docker_frontend  .env_local  README.md  nuxt.config.js  package-lock.json  utils.js
meta-crew-frontend/components/: AppBar.vue  EntryForm.vue  MainInfo.vue  ReportStatus.vue  TermsAndPolicy.vue
meta-crew-frontend/layouts/: default.vue
meta-crew-frontend/pages/: index.vue
meta-crew-frontend/plugins/: dynamicTheme.js  googleAuth.js
meta-crew-frontend/services/: theme-service.js
meta-crew-frontend/static/: terms_and_policy.html  terms_and_policy.md
meta-crew-frontend/static/examples/: consumer-personas-creator.md  dr-casa-en.md  dr-casa.md  footnotes.md  hidalgos.md  (+6 more)
meta-crew-frontend/utils/: logging.js  markdown.js
meta_crew_backend/: .env_template  README.md  agents_created.yaml  config_created.yaml  etc  pyproject.toml  requirements.txt  tasks_created.yaml
meta_crew_backend/logs/: dr-casa.md  informe-hidalgos.md  wellness.md
meta_crew_backend/src/: crew.py  crew_factory.py  derived_crew.py
meta_crew_backend/src/backend_fastapi/: auth_store.py  main.py
meta_crew_backend/src/prompts/: generate-files.j2  generate-prompts.py
meta_crew_backend/src/utils/: models.py  reports.py
prompts/: generate-agents copy.j2  generate-agents.j2  generate-config.j2  generate-tasks.j2
(+33 files in other folders)
